# NLP_final

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
data/models/: classifier.pkl
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
infra/: Dockerfile  docker-compose.yml  nginx.conf
infra/ecs/: task-definition.json
src/cv_analyzer/: app.py  classifier.py  features.py  file_loader.py  preprocessing.py  summarizer.py
src/cv_analyzer/api/: __init__.py  dependencies.py  main.py  schemas.py
src/cv_analyzer/api/routes/: __init__.py  analyze.py  classify.py  health.py  summarize.py
tests/: conftest.py
tests/e2e/: test_endpoints.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_features.py  test_preprocessing.py  test_summarizer.py
